c-language/c-language.output
Terminals unused in grammar

    CHARACTER


State 110 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: decl_lista

    2 decl_lista: decl decl_lista
    3           | decl

    4 decl: var_decl
    5     | func_decl

    6 var_decl: tipo_especificador ID SEMICOLON
    7         | tipo_especificador ID dimen_matriz SEMICOLON

    8 dimen_matriz: OB NUM_INT CB
    9             | OB NUM_INT CB dimen_matriz

   10 tipo_especificador: INT
   11                   | FLOAT
   12                   | CHAR
   13                   | VOID
   14                   | STRUCT ID OCB atributos_decl CCB

   15 atributos_decl: var_decl
   16               | var_decl atributos_decl

   17 func_decl: tipo_especificador ID OP params CP composto_decl

   18 params: params_lista
   19       | VOID

   20 params_lista: param
   21             | param COMMA params_lista

   22 param: tipo_especificador ID
   23      | tipo_especificador ID OB CB

   24 composto_decl: OCB local_decl comando_lista CCB

   25 local_decl: var_decl local_decl
   26           | ε

   27 comando_lista: comando comando_lista
   28              | ε

   29 comando: comando_casado
   30        | comando_singular

   31 comando_casado: expressao_decl
   32               | composto_decl
   33               | iteracao_decl
   34               | retorno_decl
   35               | IF OP expressao CP comando_casado ELSE comando_casado

   36 comando_singular: IF OP expressao CP comando
   37                 | IF OP expressao CP comando_casado ELSE comando_singular

   38 expressao_decl: expressao SEMICOLON
   39               | SEMICOLON

   40 iteracao_decl: WHILE OP expressao CP comando

   41 retorno_decl: RETURN SEMICOLON
   42             | RETURN expressao SEMICOLON

   43 expressao: var EQ expressao
   44          | expressao_simples

   45 var: ID
   46    | ID var_aux

   47 var_aux: OB expressao CB
   48        | OB expressao CB var_aux

   49 expressao_simples: expressao_soma RELOP expressao_soma
   50                  | expressao_soma

   51 expressao_soma: termo
   52               | termo expressao_somatorio

   53 expressao_somatorio: SOMA termo
   54                    | SOMA termo expressao_somatorio

   55 termo: fator
   56      | fator termo_aux

   57 termo_aux: MULT fator
   58          | MULT fator termo_aux

   59 fator: OP expressao CP
   60      | var
   61      | ativacao
   62      | NUM_FLOAT
   63      | NUM_INT

   64 ativacao: ID OP args CP

   65 args: arg_list
   66     | ε

   67 arg_list: expressao
   68         | expressao COMMA arg_list


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID (258) 6 7 14 17 22 23 45 46 64
    INT (259) 10
    FLOAT (260) 11
    CHAR (261) 12
    IF (262) 35 36 37
    ELSE (263) 35 37
    WHILE (264) 40
    RETURN (265) 41 42
    SOMA (266) 53 54
    MULT (267) 57 58
    EQ (268) 43
    RELOP (269) 49
    SEMICOLON (270) 6 7 38 39 41 42
    COMMA (271) 21 68
    OCB (272) 14 24
    CCB (273) 14 24
    OP (274) 17 35 36 37 40 59 64
    CP (275) 17 35 36 37 40 59 64
    OB (276) 8 9 23 47 48
    CB (277) 8 9 23 47 48
    NUM_INT (278) 8 9 63
    NUM_FLOAT (279) 62
    CHARACTER (280)
    STRUCT (281) 14
    VOID (282) 13 19


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    programa (29)
        on left: 1
        on right: 0
    decl_lista (30)
        on left: 2 3
        on right: 1 2
    decl (31)
        on left: 4 5
        on right: 2 3
    var_decl (32)
        on left: 6 7
        on right: 4 15 16 25
    dimen_matriz (33)
        on left: 8 9
        on right: 7 9
    tipo_especificador (34)
        on left: 10 11 12 13 14
        on right: 6 7 17 22 23
    atributos_decl (35)
        on left: 15 16
        on right: 14 16
    func_decl (36)
        on left: 17
        on right: 5
    params (37)
        on left: 18 19
        on right: 17
    params_lista (38)
        on left: 20 21
        on right: 18 21
    param (39)
        on left: 22 23
        on right: 20 21
    composto_decl (40)
        on left: 24
        on right: 17 32
    local_decl (41)
        on left: 25 26
        on right: 24 25
    comando_lista (42)
        on left: 27 28
        on right: 24 27
    comando (43)
        on left: 29 30
        on right: 27 36 40
    comando_casado (44)
        on left: 31 32 33 34 35
        on right: 29 35 37
    comando_singular (45)
        on left: 36 37
        on right: 30 37
    expressao_decl (46)
        on left: 38 39
        on right: 31
    iteracao_decl (47)
        on left: 40
        on right: 33
    retorno_decl (48)
        on left: 41 42
        on right: 34
    expressao (49)
        on left: 43 44
        on right: 35 36 37 38 40 42 43 47 48 59 67 68
    var (50)
        on left: 45 46
        on right: 43 60
    var_aux (51)
        on left: 47 48
        on right: 46 48
    expressao_simples (52)
        on left: 49 50
        on right: 44
    expressao_soma (53)
        on left: 51 52
        on right: 49 50
    expressao_somatorio (54)
        on left: 53 54
        on right: 52 54
    termo (55)
        on left: 55 56
        on right: 51 52 53 54
    termo_aux (56)
        on left: 57 58
        on right: 56 58
    fator (57)
        on left: 59 60 61 62 63
        on right: 55 56 57 58
    ativacao (58)
        on left: 64
        on right: 61
    args (59)
        on left: 65 66
        on right: 64
    arg_list (60)
        on left: 67 68
        on right: 65 68


State 0

    0 $accept: • programa $end

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    VOID    shift, and go to state 5

    programa            go to state 6
    decl_lista          go to state 7
    decl                go to state 8
    var_decl            go to state 9
    tipo_especificador  go to state 10
    func_decl           go to state 11


State 1

   10 tipo_especificador: INT •

    $default  reduce using rule 10 (tipo_especificador)


State 2

   11 tipo_especificador: FLOAT •

    $default  reduce using rule 11 (tipo_especificador)


State 3

   12 tipo_especificador: CHAR •

    $default  reduce using rule 12 (tipo_especificador)


State 4

   14 tipo_especificador: STRUCT • ID OCB atributos_decl CCB

    ID  shift, and go to state 12


State 5

   13 tipo_especificador: VOID •

    $default  reduce using rule 13 (tipo_especificador)


State 6

    0 $accept: programa • $end

    $end  shift, and go to state 13


State 7

    1 programa: decl_lista •

    $default  reduce using rule 1 (programa)


State 8

    2 decl_lista: decl • decl_lista
    3           | decl •

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    VOID    shift, and go to state 5

    $default  reduce using rule 3 (decl_lista)

    decl_lista          go to state 14
    decl                go to state 8
    var_decl            go to state 9
    tipo_especificador  go to state 10
    func_decl           go to state 11


State 9

    4 decl: var_decl •

    $default  reduce using rule 4 (decl)


State 10

    6 var_decl: tipo_especificador • ID SEMICOLON
    7         | tipo_especificador • ID dimen_matriz SEMICOLON
   17 func_decl: tipo_especificador • ID OP params CP composto_decl

    ID  shift, and go to state 15


State 11

    5 decl: func_decl •

    $default  reduce using rule 5 (decl)


State 12

   14 tipo_especificador: STRUCT ID • OCB atributos_decl CCB

    OCB  shift, and go to state 16


State 13

    0 $accept: programa $end •

    $default  accept


State 14

    2 decl_lista: decl decl_lista •

    $default  reduce using rule 2 (decl_lista)


State 15

    6 var_decl: tipo_especificador ID • SEMICOLON
    7         | tipo_especificador ID • dimen_matriz SEMICOLON
   17 func_decl: tipo_especificador ID • OP params CP composto_decl

    SEMICOLON  shift, and go to state 17
    OP         shift, and go to state 18
    OB         shift, and go to state 19

    dimen_matriz  go to state 20


State 16

   14 tipo_especificador: STRUCT ID OCB • atributos_decl CCB

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    VOID    shift, and go to state 5

    var_decl            go to state 21
    tipo_especificador  go to state 22
    atributos_decl      go to state 23


State 17

    6 var_decl: tipo_especificador ID SEMICOLON •

    $default  reduce using rule 6 (var_decl)


State 18

   17 func_decl: tipo_especificador ID OP • params CP composto_decl

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    VOID    shift, and go to state 24

    tipo_especificador  go to state 25
    params              go to state 26
    params_lista        go to state 27
    param               go to state 28


State 19

    8 dimen_matriz: OB • NUM_INT CB
    9             | OB • NUM_INT CB dimen_matriz

    NUM_INT  shift, and go to state 29


State 20

    7 var_decl: tipo_especificador ID dimen_matriz • SEMICOLON

    SEMICOLON  shift, and go to state 30


State 21

   15 atributos_decl: var_decl •
   16               | var_decl • atributos_decl

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    VOID    shift, and go to state 5

    $default  reduce using rule 15 (atributos_decl)

    var_decl            go to state 21
    tipo_especificador  go to state 22
    atributos_decl      go to state 31


State 22

    6 var_decl: tipo_especificador • ID SEMICOLON
    7         | tipo_especificador • ID dimen_matriz SEMICOLON

    ID  shift, and go to state 32


State 23

   14 tipo_especificador: STRUCT ID OCB atributos_decl • CCB

    CCB  shift, and go to state 33


State 24

   13 tipo_especificador: VOID •
   19 params: VOID •

    CP        reduce using rule 19 (params)
    $default  reduce using rule 13 (tipo_especificador)


State 25

   22 param: tipo_especificador • ID
   23      | tipo_especificador • ID OB CB

    ID  shift, and go to state 34


State 26

   17 func_decl: tipo_especificador ID OP params • CP composto_decl

    CP  shift, and go to state 35


State 27

   18 params: params_lista •

    $default  reduce using rule 18 (params)


State 28

   20 params_lista: param •
   21             | param • COMMA params_lista

    COMMA  shift, and go to state 36

    $default  reduce using rule 20 (params_lista)


State 29

    8 dimen_matriz: OB NUM_INT • CB
    9             | OB NUM_INT • CB dimen_matriz

    CB  shift, and go to state 37


State 30

    7 var_decl: tipo_especificador ID dimen_matriz SEMICOLON •

    $default  reduce using rule 7 (var_decl)


State 31

   16 atributos_decl: var_decl atributos_decl •

    $default  reduce using rule 16 (atributos_decl)


State 32

    6 var_decl: tipo_especificador ID • SEMICOLON
    7         | tipo_especificador ID • dimen_matriz SEMICOLON

    SEMICOLON  shift, and go to state 17
    OB         shift, and go to state 19

    dimen_matriz  go to state 20


State 33

   14 tipo_especificador: STRUCT ID OCB atributos_decl CCB •

    $default  reduce using rule 14 (tipo_especificador)


State 34

   22 param: tipo_especificador ID •
   23      | tipo_especificador ID • OB CB

    OB  shift, and go to state 38

    $default  reduce using rule 22 (param)


State 35

   17 func_decl: tipo_especificador ID OP params CP • composto_decl

    OCB  shift, and go to state 39

    composto_decl  go to state 40


State 36

   21 params_lista: param COMMA • params_lista

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    VOID    shift, and go to state 5

    tipo_especificador  go to state 25
    params_lista        go to state 41
    param               go to state 28


State 37

    8 dimen_matriz: OB NUM_INT CB •
    9             | OB NUM_INT CB • dimen_matriz

    OB  shift, and go to state 19

    $default  reduce using rule 8 (dimen_matriz)

    dimen_matriz  go to state 42


State 38

   23 param: tipo_especificador ID OB • CB

    CB  shift, and go to state 43


State 39

   24 composto_decl: OCB • local_decl comando_lista CCB

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    VOID    shift, and go to state 5

    $default  reduce using rule 26 (local_decl)

    var_decl            go to state 44
    tipo_especificador  go to state 22
    local_decl          go to state 45


State 40

   17 func_decl: tipo_especificador ID OP params CP composto_decl •

    $default  reduce using rule 17 (func_decl)


State 41

   21 params_lista: param COMMA params_lista •

    $default  reduce using rule 21 (params_lista)


State 42

    9 dimen_matriz: OB NUM_INT CB dimen_matriz •

    $default  reduce using rule 9 (dimen_matriz)


State 43

   23 param: tipo_especificador ID OB CB •

    $default  reduce using rule 23 (param)


State 44

   25 local_decl: var_decl • local_decl

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    VOID    shift, and go to state 5

    $default  reduce using rule 26 (local_decl)

    var_decl            go to state 44
    tipo_especificador  go to state 22
    local_decl          go to state 46


State 45

   24 composto_decl: OCB local_decl • comando_lista CCB

    ID         shift, and go to state 47
    IF         shift, and go to state 48
    WHILE      shift, and go to state 49
    RETURN     shift, and go to state 50
    SEMICOLON  shift, and go to state 51
    OCB        shift, and go to state 39
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    $default  reduce using rule 28 (comando_lista)

    composto_decl      go to state 55
    comando_lista      go to state 56
    comando            go to state 57
    comando_casado     go to state 58
    comando_singular   go to state 59
    expressao_decl     go to state 60
    iteracao_decl      go to state 61
    retorno_decl       go to state 62
    expressao          go to state 63
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69


State 46

   25 local_decl: var_decl local_decl •

    $default  reduce using rule 25 (local_decl)


State 47

   45 var: ID •
   46    | ID • var_aux
   64 ativacao: ID • OP args CP

    OP  shift, and go to state 70
    OB  shift, and go to state 71

    $default  reduce using rule 45 (var)

    var_aux  go to state 72


State 48

   35 comando_casado: IF • OP expressao CP comando_casado ELSE comando_casado
   36 comando_singular: IF • OP expressao CP comando
   37                 | IF • OP expressao CP comando_casado ELSE comando_singular

    OP  shift, and go to state 73


State 49

   40 iteracao_decl: WHILE • OP expressao CP comando

    OP  shift, and go to state 74


State 50

   41 retorno_decl: RETURN • SEMICOLON
   42             | RETURN • expressao SEMICOLON

    ID         shift, and go to state 47
    SEMICOLON  shift, and go to state 75
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    expressao          go to state 76
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69


State 51

   39 expressao_decl: SEMICOLON •

    $default  reduce using rule 39 (expressao_decl)


State 52

   59 fator: OP • expressao CP

    ID         shift, and go to state 47
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    expressao          go to state 77
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69


State 53

   63 fator: NUM_INT •

    $default  reduce using rule 63 (fator)


State 54

   62 fator: NUM_FLOAT •

    $default  reduce using rule 62 (fator)


State 55

   32 comando_casado: composto_decl •

    $default  reduce using rule 32 (comando_casado)


State 56

   24 composto_decl: OCB local_decl comando_lista • CCB

    CCB  shift, and go to state 78


State 57

   27 comando_lista: comando • comando_lista

    ID         shift, and go to state 47
    IF         shift, and go to state 48
    WHILE      shift, and go to state 49
    RETURN     shift, and go to state 50
    SEMICOLON  shift, and go to state 51
    OCB        shift, and go to state 39
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    $default  reduce using rule 28 (comando_lista)

    composto_decl      go to state 55
    comando_lista      go to state 79
    comando            go to state 57
    comando_casado     go to state 58
    comando_singular   go to state 59
    expressao_decl     go to state 60
    iteracao_decl      go to state 61
    retorno_decl       go to state 62
    expressao          go to state 63
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69


State 58

   29 comando: comando_casado •

    $default  reduce using rule 29 (comando)


State 59

   30 comando: comando_singular •

    $default  reduce using rule 30 (comando)


State 60

   31 comando_casado: expressao_decl •

    $default  reduce using rule 31 (comando_casado)


State 61

   33 comando_casado: iteracao_decl •

    $default  reduce using rule 33 (comando_casado)


State 62

   34 comando_casado: retorno_decl •

    $default  reduce using rule 34 (comando_casado)


State 63

   38 expressao_decl: expressao • SEMICOLON

    SEMICOLON  shift, and go to state 80


State 64

   43 expressao: var • EQ expressao
   60 fator: var •

    EQ  shift, and go to state 81

    $default  reduce using rule 60 (fator)


State 65

   44 expressao: expressao_simples •

    $default  reduce using rule 44 (expressao)


State 66

   49 expressao_simples: expressao_soma • RELOP expressao_soma
   50                  | expressao_soma •

    RELOP  shift, and go to state 82

    $default  reduce using rule 50 (expressao_simples)


State 67

   51 expressao_soma: termo •
   52               | termo • expressao_somatorio

    SOMA  shift, and go to state 83

    $default  reduce using rule 51 (expressao_soma)

    expressao_somatorio  go to state 84


State 68

   55 termo: fator •
   56      | fator • termo_aux

    MULT  shift, and go to state 85

    $default  reduce using rule 55 (termo)

    termo_aux  go to state 86


State 69

   61 fator: ativacao •

    $default  reduce using rule 61 (fator)


State 70

   64 ativacao: ID OP • args CP

    ID         shift, and go to state 47
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    $default  reduce using rule 66 (args)

    expressao          go to state 87
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69
    args               go to state 88
    arg_list           go to state 89


State 71

   47 var_aux: OB • expressao CB
   48        | OB • expressao CB var_aux

    ID         shift, and go to state 47
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    expressao          go to state 90
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69


State 72

   46 var: ID var_aux •

    $default  reduce using rule 46 (var)


State 73

   35 comando_casado: IF OP • expressao CP comando_casado ELSE comando_casado
   36 comando_singular: IF OP • expressao CP comando
   37                 | IF OP • expressao CP comando_casado ELSE comando_singular

    ID         shift, and go to state 47
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    expressao          go to state 91
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69


State 74

   40 iteracao_decl: WHILE OP • expressao CP comando

    ID         shift, and go to state 47
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    expressao          go to state 92
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69


State 75

   41 retorno_decl: RETURN SEMICOLON •

    $default  reduce using rule 41 (retorno_decl)


State 76

   42 retorno_decl: RETURN expressao • SEMICOLON

    SEMICOLON  shift, and go to state 93


State 77

   59 fator: OP expressao • CP

    CP  shift, and go to state 94


State 78

   24 composto_decl: OCB local_decl comando_lista CCB •

    $default  reduce using rule 24 (composto_decl)


State 79

   27 comando_lista: comando comando_lista •

    $default  reduce using rule 27 (comando_lista)


State 80

   38 expressao_decl: expressao SEMICOLON •

    $default  reduce using rule 38 (expressao_decl)


State 81

   43 expressao: var EQ • expressao

    ID         shift, and go to state 47
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    expressao          go to state 95
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69


State 82

   49 expressao_simples: expressao_soma RELOP • expressao_soma

    ID         shift, and go to state 47
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    var             go to state 96
    expressao_soma  go to state 97
    termo           go to state 67
    fator           go to state 68
    ativacao        go to state 69


State 83

   53 expressao_somatorio: SOMA • termo
   54                    | SOMA • termo expressao_somatorio

    ID         shift, and go to state 47
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    var       go to state 96
    termo     go to state 98
    fator     go to state 68
    ativacao  go to state 69


State 84

   52 expressao_soma: termo expressao_somatorio •

    $default  reduce using rule 52 (expressao_soma)


State 85

   57 termo_aux: MULT • fator
   58          | MULT • fator termo_aux

    ID         shift, and go to state 47
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    var       go to state 96
    fator     go to state 99
    ativacao  go to state 69


State 86

   56 termo: fator termo_aux •

    $default  reduce using rule 56 (termo)


State 87

   67 arg_list: expressao •
   68         | expressao • COMMA arg_list

    COMMA  shift, and go to state 100

    $default  reduce using rule 67 (arg_list)


State 88

   64 ativacao: ID OP args • CP

    CP  shift, and go to state 101


State 89

   65 args: arg_list •

    $default  reduce using rule 65 (args)


State 90

   47 var_aux: OB expressao • CB
   48        | OB expressao • CB var_aux

    CB  shift, and go to state 102


State 91

   35 comando_casado: IF OP expressao • CP comando_casado ELSE comando_casado
   36 comando_singular: IF OP expressao • CP comando
   37                 | IF OP expressao • CP comando_casado ELSE comando_singular

    CP  shift, and go to state 103


State 92

   40 iteracao_decl: WHILE OP expressao • CP comando

    CP  shift, and go to state 104


State 93

   42 retorno_decl: RETURN expressao SEMICOLON •

    $default  reduce using rule 42 (retorno_decl)


State 94

   59 fator: OP expressao CP •

    $default  reduce using rule 59 (fator)


State 95

   43 expressao: var EQ expressao •

    $default  reduce using rule 43 (expressao)


State 96

   60 fator: var •

    $default  reduce using rule 60 (fator)


State 97

   49 expressao_simples: expressao_soma RELOP expressao_soma •

    $default  reduce using rule 49 (expressao_simples)


State 98

   53 expressao_somatorio: SOMA termo •
   54                    | SOMA termo • expressao_somatorio

    SOMA  shift, and go to state 83

    $default  reduce using rule 53 (expressao_somatorio)

    expressao_somatorio  go to state 105


State 99

   57 termo_aux: MULT fator •
   58          | MULT fator • termo_aux

    MULT  shift, and go to state 85

    $default  reduce using rule 57 (termo_aux)

    termo_aux  go to state 106


State 100

   68 arg_list: expressao COMMA • arg_list

    ID         shift, and go to state 47
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    expressao          go to state 87
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69
    arg_list           go to state 107


State 101

   64 ativacao: ID OP args CP •

    $default  reduce using rule 64 (ativacao)


State 102

   47 var_aux: OB expressao CB •
   48        | OB expressao CB • var_aux

    OB  shift, and go to state 71

    $default  reduce using rule 47 (var_aux)

    var_aux  go to state 108


State 103

   35 comando_casado: IF OP expressao CP • comando_casado ELSE comando_casado
   36 comando_singular: IF OP expressao CP • comando
   37                 | IF OP expressao CP • comando_casado ELSE comando_singular

    ID         shift, and go to state 47
    IF         shift, and go to state 48
    WHILE      shift, and go to state 49
    RETURN     shift, and go to state 50
    SEMICOLON  shift, and go to state 51
    OCB        shift, and go to state 39
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    composto_decl      go to state 55
    comando            go to state 109
    comando_casado     go to state 110
    comando_singular   go to state 59
    expressao_decl     go to state 60
    iteracao_decl      go to state 61
    retorno_decl       go to state 62
    expressao          go to state 63
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69


State 104

   40 iteracao_decl: WHILE OP expressao CP • comando

    ID         shift, and go to state 47
    IF         shift, and go to state 48
    WHILE      shift, and go to state 49
    RETURN     shift, and go to state 50
    SEMICOLON  shift, and go to state 51
    OCB        shift, and go to state 39
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    composto_decl      go to state 55
    comando            go to state 111
    comando_casado     go to state 58
    comando_singular   go to state 59
    expressao_decl     go to state 60
    iteracao_decl      go to state 61
    retorno_decl       go to state 62
    expressao          go to state 63
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69


State 105

   54 expressao_somatorio: SOMA termo expressao_somatorio •

    $default  reduce using rule 54 (expressao_somatorio)


State 106

   58 termo_aux: MULT fator termo_aux •

    $default  reduce using rule 58 (termo_aux)


State 107

   68 arg_list: expressao COMMA arg_list •

    $default  reduce using rule 68 (arg_list)


State 108

   48 var_aux: OB expressao CB var_aux •

    $default  reduce using rule 48 (var_aux)


State 109

   36 comando_singular: IF OP expressao CP comando •

    $default  reduce using rule 36 (comando_singular)


State 110

   29 comando: comando_casado •
   35 comando_casado: IF OP expressao CP comando_casado • ELSE comando_casado
   37 comando_singular: IF OP expressao CP comando_casado • ELSE comando_singular

    ELSE  shift, and go to state 112

    ELSE      [reduce using rule 29 (comando)]
    $default  reduce using rule 29 (comando)


State 111

   40 iteracao_decl: WHILE OP expressao CP comando •

    $default  reduce using rule 40 (iteracao_decl)


State 112

   35 comando_casado: IF OP expressao CP comando_casado ELSE • comando_casado
   37 comando_singular: IF OP expressao CP comando_casado ELSE • comando_singular

    ID         shift, and go to state 47
    IF         shift, and go to state 48
    WHILE      shift, and go to state 49
    RETURN     shift, and go to state 50
    SEMICOLON  shift, and go to state 51
    OCB        shift, and go to state 39
    OP         shift, and go to state 52
    NUM_INT    shift, and go to state 53
    NUM_FLOAT  shift, and go to state 54

    composto_decl      go to state 55
    comando_casado     go to state 113
    comando_singular   go to state 114
    expressao_decl     go to state 60
    iteracao_decl      go to state 61
    retorno_decl       go to state 62
    expressao          go to state 63
    var                go to state 64
    expressao_simples  go to state 65
    expressao_soma     go to state 66
    termo              go to state 67
    fator              go to state 68
    ativacao           go to state 69


State 113

   35 comando_casado: IF OP expressao CP comando_casado ELSE comando_casado •

    $default  reduce using rule 35 (comando_casado)


State 114

   37 comando_singular: IF OP expressao CP comando_casado ELSE comando_singular •

    $default  reduce using rule 37 (comando_singular)
